applications/media-experimental/base/librarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: librarr
  labels:
    app: librarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5050
      targetPort: http
      protocol: TCP
  selector:
    app: librarr
