applications/media-experimental/base/librarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librarr
  labels:
    app: librarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/instance: "main"
    gethomepage.dev/name: "Librarr"
    gethomepage.dev/description: "Books *arr (13 search sources)"
    gethomepage.dev/group: "Book Automation (Exp)"
    gethomepage.dev/weight: "22"
    gethomepage.dev/icon: "book.png"
    gethomepage.dev/href: "http://librarr.${CLUSTER_DOMAIN}"
    gethomepage.dev/siteMonitor: "http://librarr.media-experimental.svc.cluster.local:5050"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`librarr.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: librarr
          port: 5050
